<resources>
    <string name="FreeformWindowOrientation_landscape" />
    <string name="FreeformWindowOrientation_portrait" />
    <string name="FreeformWindowSize_maximize" />
    <string name="FreeformWindowSize_phone" />
    <string name="FreeformWindowSize_tablet" />
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="action_settings">Settings</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_name">DJI Auto</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="auto_cd_aeb_title">Be cautious of the front barrier.</string>
    <string name="auto_da_fcw">Car distance is too close.</string>
    <string name="auto_da_ldw_left">Left lane departure.</string>
    <string name="auto_da_ldw_right">Right lane departure.</string>
    <string name="auto_drive_on_1000_meter_to_ramp">1000 meters to enter ramp.</string>
    <string name="auto_drive_on_100_meter_to_ramp">100 meters to enter ramp.</string>
    <string name="auto_drive_on_right_100_meter_to_toll">100 meters to arrive toll gate.</string>
    <string name="auto_drive_on_right_500_meter_to_toll">500 meters to arrive toll gate.</string>
    <string name="auto_drive_on_right_one_kilometer_to_toll">1000 meters to arrive toll gate.</string>
    <string name="auto_mod_toast_destination_quit_100m">MOD will exit in 100 meters.</string>
    <string name="auto_mod_toast_destination_quit_200m">MOD will exit in 200 meters.</string>
    <string name="auto_mod_toast_destination_quit_500m">MOD will exit in 500 meters.</string>
    <string name="auto_mod_toast_recommend">Current road has available MOD routine, please activate MOD.</string>
    <string name="auto_reset_auto">Return to autonomous driving.</string>
    <string name="auto_steering_wheel_shake">Be cautious! Wheel resonance is out of order, please hold the wheel!</string>
    <string name="auto_tja_override_accelerator">Lateral control</string>
    <string name="auto_tja_override_width_wise">Longitudinal control</string>
    <string name="avm_active_by_obstacle">障碍物距离过近</string>
    <string name="avm_active_by_transparent_bonnet">透明底盘</string>
    <string name="avm_active_by_turn_light">转向灯激活</string>
    <string name="avm_name">360环视</string>
    <string name="avm_settings">设置</string>
    <string name="avm_str_null">null</string>
    <string name="avm_tab_360">360影像</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="chip_text">Chip text</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="common_factory_tools_app_version" formatted="false">APP版本：%s, %s</string>
    <string name="common_factory_tools_device_bound">已绑设备:</string>
    <string name="common_factory_tools_search">搜索</string>
    <string name="common_factory_tools_search_hint">设备名称</string>
    <string name="common_factory_tools_set_success">设置成功</string>
    <string name="common_factory_tools_settings">设置</string>
    <string name="common_factory_tools_ue4_version">UE4版本：%s</string>
    <string name="common_factory_tools_use_ip">网络连接</string>
    <string name="driving_name">智能行车</string>
    <string name="driving_text_cannot_lane_change">当前无法变道</string>
    <string name="driving_text_d130_recommend_good_condition">路况较好，是否为您开启智能行车辅助功能</string>
    <string name="driving_text_d130_recommend_jam">道路拥堵，是否为您开启智能行车辅助功能</string>
    <string name="driving_text_front_green_light">前方绿灯</string>
    <string name="driving_text_front_obstacle">前方障碍物</string>
    <string name="driving_text_lane_change_success">变道已完成</string>
    <string name="driving_text_lane_lost">请控制方向盘</string>
    <string name="driving_text_mod_change_to_d130">已切换为智能行车辅助</string>
    <string name="driving_text_mod_learn_around_camera">环视摄像头被遮挡，当前功能无法激活</string>
    <string name="driving_text_mod_learn_scan_cover">前视摄像头被遮挡，当前功能无法激活</string>
    <string name="driving_text_route_create_fail">路线创建失败</string>
    <string name="driving_text_route_create_success">路线创建成功</string>
    <string name="driving_text_take_over_warning_level3">请立即接管车辆，系统即将退出</string>
    <string name="error_icon_content_description">Error</string>
    <string name="exposed_dropdown_menu_content_description">Show dropdown menu</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="game_view_content_description">Game view</string>
    <string name="gmw_pad_ra_tips_content">a</string>
    <string name="hello_world">Hello world!</string>
    <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="icon_content_description">Dialog Icon</string>
    <string name="is_auto_account_login_prompt_toast_cancel_btn_title">Cancel</string>
    <string name="is_auto_account_login_prompt_toast_confirm_btn_title">OK</string>
    <string name="is_auto_account_login_prompt_toast_explain_title">No account logged in. Some functions may be unavailable. Log in now?</string>
    <string name="is_auto_account_login_prompt_toast_title">Account Login Notes</string>
    <string name="is_auto_account_personal_center_account_set_account_change_subtitle">Change Account</string>
    <string name="is_auto_account_personal_center_account_set_captcha_btn_content">Code Verification</string>
    <string name="is_auto_account_personal_center_account_set_done_content">Done</string>
    <string name="is_auto_account_personal_center_account_set_entern_number_subtitle">Enter phone number to verify</string>
    <string name="is_auto_account_personal_center_account_set_logout_subtitle">Log Out</string>
    <string name="is_auto_account_personal_center_account_set_number_subtitle">Phone number</string>
    <string name="is_auto_account_personal_center_account_set_password_change_subtitle">Change Password</string>
    <string name="is_auto_account_personal_center_account_set_password_phone_toast_title">Change phone number?</string>
    <string name="is_auto_account_personal_center_account_set_password_toast_content">Password</string>
    <string name="is_auto_account_personal_center_account_set_rename_confirm_btn_subtitle">OK</string>
    <string name="is_auto_account_personal_center_account_set_rename_content">Create Nickname</string>
    <string name="is_auto_account_personal_center_account_set_rename_subtitle">Rename</string>
    <string name="is_auto_account_personal_center_account_set_rename_type_subtitle">Nickname must be between 1-10 characters and contain letters, numbers, and Chinese characters</string>
    <string name="is_auto_account_personal_center_account_set_secessfully_toast_content">Phone number changed</string>
    <string name="is_auto_account_personal_center_account_set_subtitle">Not bound</string>
    <string name="is_auto_account_personal_center_account_set_switch_sign_out_btn_content">Exit</string>
    <string name="is_auto_account_personal_center_account_set_switch_sign_out_cancel_btn_content">Cancel</string>
    <string name="is_auto_account_personal_center_account_set_switch_sign_out_toast_content">It will take several minutes to remove your information from this vehicle</string>
    <string name="is_auto_account_personal_center_account_set_switch_sign_out_toast_title">Log out?</string>
    <string name="is_auto_account_personal_center_faceid_password_main_btn_subtitle">Face ID and Password</string>
    <string name="settings_str_3d_data_record">3D数据录制（只在Debug版本的App有效）</string>
    <string name="settings_str_avm_float_switch_name">AVM浮窗页面屏蔽（默认不屏蔽）</string>
    <string name="settings_str_avm_loading_switch_name">AVM loading页面屏蔽（默认不屏蔽）</string>
    <string name="settings_str_change_ws_connection_timeout">WS连接超时时间（打开3s，关闭10s）</string>
    <string name="settings_str_driving_layout_size_switch_name">行车全屏开关（默认关闭）</string>
    <string name="settings_str_envelope_name">包络线开关（默认关闭）</string>
    <string name="settings_str_freespace_switch_name">Freespace开关（默认关闭）</string>
    <string name="settings_str_function_enable_switch_name">Demo功能开关（BV泊车、3D AVM和记忆泊车探索模式）（默认关闭）</string>
    <string name="settings_str_log_3d_switch_name">3D Debug工具开关（默认关闭）</string>
    <string name="settings_str_mod_func_enable">MOD功能开关（默认关闭）</string>
    <string name="settings_str_start_3d_data_record">开始3D数据录制</string>
    <string name="settings_str_title">Debug</string>
    <string name="settings_str_traffic_light_name">3D红绿灯开关（默认关闭）</string>
    <string name="sgmw_pad_avm_setting_activate_lowspeed_content">a</string>
    <string name="sgmw_pad_avm_setting_activate_steeringwheel_content">a</string>
    <string name="sgmw_pad_avm_setting_activate_turnsignal_content">a</string>
    <string name="sgmw_pad_mod_creat_guide_step01_title">a</string>
    <string name="sgmw_pad_mod_creat_guide_step02_title">a</string>
    <string name="sgmw_pad_mod_creat_guide_step03_title">a</string>
    <string name="sgmw_pad_mod_guide_2_step_1_subtitle">a</string>
    <string name="sgmw_pad_mod_guide_2_step_2_subtitle">a</string>
    <string name="sgmw_pad_mod_guide_2_step_3_subtitle">a</string>
    <string name="sgmw_pad_mod_memory_finish_btn">a</string>
    <string name="sgmw_pad_mod_memory_tipps1_content">a</string>
    <string name="sgmw_pad_mod_quit_nomal_btn">a</string>
    <string name="sgmw_pad_setting">a</string>
    <string name="sgmw_pad_vpa_route_delete_dialog_btn_cancel_content">a</string>
    <string name="sgmw_pad_vpa_route_delete_dialog_btn_confirm_content">a</string>
    <string name="sgmw_pad_vpa_route_delete_dialog_content">a</string>
    <string name="sgmw_pad_vpa_route_delete_dialog_tittle">a</string>
</resources>