<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/avm_setting_view" android:background="@drawable/bg_avm_settings" android:layout_width="fill_parent" android:layout_height="fill_parent" android:weightSum="3.0"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="fill_parent" android:layout_height="76.0dip" android:layout_margin="8.0dip">
        <TextView android:textSize="@dimen/common_text_size_middle" android:textStyle="bold" android:textColor="@color/avm_text_normal" android:gravity="center_vertical" android:id="@id/avm_settings_tv_title" android:background="@drawable/bg_avm_text_settings" android:paddingLeft="22.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_margin="8.0dip" android:text="@string/sgmw_pad_setting" />
        <ImageView android:id="@id/avm_settings_iv_title" android:layout_width="28.0dip" android:layout_height="28.0dip" android:src="@drawable/ic_avm_active_settings_black" android:layout_marginEnd="16.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <com.dji.is_avm.widget.SettingAvmSwitchBtnView android:id="@id/sb_avm_active_by_low_speed" android:paddingLeft="33.0dip" android:layout_width="fill_parent" android:layout_height="92.0dip" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" app:title_string="@string/sgmw_pad_avm_setting_activate_lowspeed_content" />
    <com.dji.is_avm.widget.SettingAvmSwitchBtnView android:id="@id/sb_avm_active_by_angle_60" android:paddingLeft="33.0dip" android:layout_width="fill_parent" android:layout_height="92.0dip" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" app:title_string="@string/sgmw_pad_avm_setting_activate_steeringwheel_content" />
    <com.dji.is_avm.widget.SettingAvmSwitchBtnView android:id="@id/sb_avm_active_by_turn_light" android:paddingLeft="33.0dip" android:layout_width="fill_parent" android:layout_height="92.0dip" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" app:title_string="@string/sgmw_pad_avm_setting_activate_turnsignal_content" />
    <com.dji.is_avm.widget.SettingAvmSwitchBtnView android:id="@id/sb_avm_active_by_obstacle" android:paddingLeft="33.0dip" android:layout_width="fill_parent" android:layout_height="92.0dip" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" app:title_string="@string/avm_active_by_obstacle" />
    <com.dji.is_avm.widget.SettingAvmSwitchBtnView android:id="@id/sb_avm_transparent_bonnet" android:paddingLeft="33.0dip" android:layout_width="fill_parent" android:layout_height="92.0dip" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" app:title_string="@string/avm_active_by_transparent_bonnet" />
</LinearLayout>