<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:focusable="true" android:clickable="true" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
        <View android:id="@id/settings_view_bg" android:background="@color/common_color_cancel_bg" android:layout_width="0.0dip" android:layout_height="0.0dip" android:layout_marginStart="20.0dip" android:layout_marginEnd="20.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="1.0" />
        <ImageView android:id="@id/settings_iv_close" android:layout_width="52.0dip" android:layout_height="52.0dip" android:layout_marginTop="20.0dip" android:src="@drawable/common_ic_exit" android:layout_marginStart="20.0dip" app:layout_constraintStart_toStartOf="@id/settings_view_bg" app:layout_constraintTop_toTopOf="@id/settings_view_bg" />
        <TextView android:textSize="@dimen/common_text_size_title" android:textColor="@color/common_color_text_normal" android:id="@id/settings_tv_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:text="@string/settings_str_title" app:layout_constraintEnd_toEndOf="@id/settings_view_bg" app:layout_constraintStart_toStartOf="@id/settings_view_bg" app:layout_constraintTop_toTopOf="@id/settings_view_bg" style="@style/TextStyleNormal" />
        <TextView android:textSize="@dimen/common_text_size_big" android:textColor="@color/common_color_text_normal" android:id="@id/settings_tv_app_version" android:focusable="false" android:clickable="false" android:layout_marginTop="20.0dip" android:layout_marginStart="20.0dip" app:layout_constraintStart_toStartOf="@id/settings_view_bg" app:layout_constraintTop_toBottomOf="@id/settings_tv_title" style="@style/TextStyleNormal" />
        <com.dji.settings.ui.SettingDjiSwitchBtnView android:id="@id/avm_loading_view_enable" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:layout_marginStart="20.0dip" app:layout_constraintStart_toStartOf="@id/settings_view_bg" app:layout_constraintTop_toBottomOf="@id/settings_tv_app_version" app:title_string="@string/settings_str_avm_loading_switch_name" />
        <com.dji.settings.ui.SettingDjiSwitchBtnView android:id="@id/avm_float_view_enable" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:layout_marginStart="20.0dip" app:layout_constraintStart_toStartOf="@id/settings_view_bg" app:layout_constraintTop_toBottomOf="@id/avm_loading_view_enable" app:title_string="@string/settings_str_avm_float_switch_name" />
        <com.dji.settings.ui.SettingDjiSwitchBtnView android:id="@id/log_3d_view_enable" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:layout_marginStart="20.0dip" app:layout_constraintStart_toStartOf="@id/settings_view_bg" app:layout_constraintTop_toBottomOf="@id/avm_float_view_enable" app:title_string="@string/settings_str_log_3d_switch_name" />
        <com.dji.settings.ui.SettingDjiSwitchBtnView android:id="@id/mod_func_change_enable" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:layout_marginStart="20.0dip" app:layout_constraintStart_toStartOf="@id/settings_view_bg" app:layout_constraintTop_toBottomOf="@id/log_3d_view_enable" app:title_string="@string/settings_str_mod_func_enable" />
        <com.dji.settings.ui.SettingDjiSwitchBtnView android:id="@id/log_driving_layout_big_enable" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:layout_marginStart="20.0dip" app:layout_constraintStart_toStartOf="@id/settings_view_bg" app:layout_constraintTop_toBottomOf="@id/mod_func_change_enable" app:title_string="@string/settings_str_driving_layout_size_switch_name" />
        <com.dji.settings.ui.SettingDjiSwitchBtnView android:id="@id/function_view_enable" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:layout_marginStart="20.0dip" app:layout_constraintStart_toStartOf="@id/settings_view_bg" app:layout_constraintTop_toBottomOf="@id/log_driving_layout_big_enable" app:title_string="@string/settings_str_function_enable_switch_name" />
        <com.dji.settings.ui.SettingDjiSwitchBtnView android:id="@id/ws_connection_timeout_change_enable" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:layout_marginStart="20.0dip" app:layout_constraintStart_toStartOf="@id/settings_view_bg" app:layout_constraintTop_toBottomOf="@id/function_view_enable" app:title_string="@string/settings_str_change_ws_connection_timeout" />
        <com.dji.settings.ui.SettingDjiSwitchBtnView android:id="@id/element_freespace_change_enable" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:layout_marginStart="20.0dip" app:layout_constraintStart_toStartOf="@id/settings_view_bg" app:layout_constraintTop_toBottomOf="@id/ws_connection_timeout_change_enable" app:title_string="@string/settings_str_freespace_switch_name" />
        <com.dji.settings.ui.SettingDjiSwitchBtnView android:id="@id/element_traffic_light_change_enable" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:layout_marginStart="20.0dip" app:layout_constraintStart_toStartOf="@id/settings_view_bg" app:layout_constraintTop_toBottomOf="@id/element_freespace_change_enable" app:title_string="@string/settings_str_traffic_light_name" />
        <com.dji.settings.ui.SettingDjiSwitchBtnView android:id="@id/element_envelope_change_enable" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:layout_marginStart="20.0dip" app:layout_constraintStart_toStartOf="@id/settings_view_bg" app:layout_constraintTop_toBottomOf="@id/element_traffic_light_change_enable" app:title_string="@string/settings_str_envelope_name" />
        <TextView android:textSize="@dimen/common_text_size_big" android:textColor="@color/common_color_text_btn_positive" android:id="@id/settings_tv_record_3d_data" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:text="@string/settings_str_3d_data_record" android:layout_marginStart="20.0dip" app:layout_constraintStart_toStartOf="@id/settings_view_bg" app:layout_constraintTop_toBottomOf="@id/element_envelope_change_enable" />
        <Button android:textSize="@dimen/common_text_size_small" android:textColor="@color/common_color_text_btn_positive" android:id="@id/settings_btn_record_3d_data" android:background="@drawable/common_bg_btn_active" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:text="@string/settings_str_start_3d_data_record" android:layout_marginStart="20.0dip" android:paddingHorizontal="10.0dip" app:layout_constraintStart_toStartOf="@id/settings_view_bg" app:layout_constraintTop_toBottomOf="@id/settings_tv_record_3d_data" />
        <FrameLayout android:id="@id/settings_fl_app_performance_container" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" app:layout_constraintStart_toStartOf="@id/settings_view_bg" app:layout_constraintTop_toBottomOf="@id/settings_btn_record_3d_data" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>