<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView android:textSize="@dimen/common_text_size_middle" android:textColor="@color/driving_mod_color_text_tip" android:id="@id/mod_study_tv_tip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="22.0dip" android:text="@string/sgmw_pad_mod_memory_tipps1_content" app:layout_constraintBottom_toTopOf="@id/mod_study_btn_complete" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" />
    <Button android:textSize="@dimen/common_text_size_big" android:textColor="@color/common_color_text_btn_positive" android:gravity="center" android:id="@id/mod_study_btn_complete" android:background="@drawable/common_bg_btn_disabled" android:layout_width="222.0dip" android:layout_height="@dimen/common_btn_height" android:layout_marginBottom="40.0dip" android:text="@string/sgmw_pad_mod_memory_finish_btn" android:stateListAnimator="@null" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toStartOf="@id/mod_study_btn_cancel" app:layout_constraintHorizontal_chainStyle="packed" app:layout_constraintStart_toStartOf="parent" />
    <Button android:textSize="@dimen/common_text_size_big" android:textColor="@color/common_color_text_btn_negative" android:gravity="center" android:id="@id/mod_study_btn_cancel" android:background="@drawable/common_bg_btn_cancel" android:layout_width="222.0dip" android:layout_height="@dimen/common_btn_height" android:text="@string/sgmw_pad_mod_quit_nomal_btn" android:layout_marginStart="36.0dip" android:stateListAnimator="@null" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_chainStyle="packed" app:layout_constraintStart_toEndOf="@id/mod_study_btn_complete" app:layout_constraintTop_toTopOf="@id/mod_study_btn_complete" />
</androidx.constraintlayout.widget.ConstraintLayout>