<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:background="@color/trans" android:focusable="false" android:clickable="false" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <View android:id="@id/common_dialog_view_bg" android:background="@drawable/common_bg_delete_dialog" android:layout_width="750.0dip" android:layout_height="420.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <TextView android:textSize="@dimen/common_text_size_subtitle" android:textColor="@color/parking_map_delete_title_text" android:id="@id/common_dialog_tv_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="36.0dip" android:text="@string/sgmw_pad_vpa_route_delete_dialog_tittle" android:layout_marginStart="54.0dip" android:layout_marginEnd="54.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="@id/common_dialog_view_bg" />
    <TextView android:textSize="@dimen/common_text_size_big" android:textColor="@color/parking_map_delete_title_subtext" android:gravity="center" android:id="@id/common_dialog_tv_subtitle" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="42.0dip" android:text="@string/sgmw_pad_vpa_route_delete_dialog_content" android:fontFamily="sans-serif-condensed" android:layout_marginStart="54.0dip" android:layout_marginEnd="54.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/common_dialog_tv_title" />
    <Button android:textSize="@dimen/common_text_size_big" android:textColor="@color/parking_map_delete_cancel_btn_text" android:gravity="center" android:id="@id/common_dialog_btn_cancel" android:background="@drawable/common_bg_btn_cancel" android:layout_width="300.0dip" android:layout_height="84.0dip" android:layout_marginBottom="48.0dip" android:text="@string/sgmw_pad_vpa_route_delete_dialog_btn_cancel_content" android:textAllCaps="false" android:layout_marginEnd="54.0dip" app:layout_constraintBottom_toBottomOf="@id/common_dialog_view_bg" app:layout_constraintEnd_toEndOf="@id/common_dialog_view_bg" />
    <Button android:textSize="@dimen/common_text_size_big" android:textColor="@color/parking_map_delete_delete_btn_text" android:gravity="center" android:id="@id/common_dialog_btn_delete" android:background="@drawable/common_bg_btn_delete" android:layout_width="300.0dip" android:layout_height="84.0dip" android:layout_marginBottom="48.0dip" android:text="@string/sgmw_pad_vpa_route_delete_dialog_btn_confirm_content" android:textAllCaps="false" android:layout_marginStart="54.0dip" app:layout_constraintBottom_toBottomOf="@id/common_dialog_view_bg" app:layout_constraintStart_toStartOf="@id/common_dialog_view_bg" />
</androidx.constraintlayout.widget.ConstraintLayout>