<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout android:id="@id/mod_tip_cl_step1" android:background="@drawable/common_bg_tip_step" android:layout_width="438.0dip" android:layout_height="108.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent">
        <ImageView android:layout_width="wrap_content" android:layout_height="fill_parent" android:src="@drawable/common_bg_tip_title" app:layout_constraintStart_toStartOf="parent" />
        <TextView android:textSize="@dimen/common_text_size_middle" android:textColor="@color/common_color_text_tip_step_title" android:id="@id/mod_tip_tv_step1_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/sgmw_pad_mod_creat_guide_step01_title" android:fontFamily="@font/montserrat_regular" android:layout_marginStart="12.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
        <TextView android:textSize="@dimen/common_text_size_middle" android:textColor="@color/common_color_text_tip_step_content" android:id="@id/mod_tip_tv_step1_content" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/sgmw_pad_mod_guide_2_step_1_subtitle" android:layout_marginStart="27.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toEndOf="@id/mod_tip_tv_step1_title" app:layout_constraintTop_toTopOf="parent" app:layout_constraintWidth_max="298.0dip" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout android:id="@id/mod_tip_cl_step2" android:background="@drawable/common_bg_tip_step" android:layout_width="438.0dip" android:layout_height="108.0dip" android:layout_marginTop="24.0dip" app:layout_constraintStart_toStartOf="@id/mod_tip_cl_step1" app:layout_constraintTop_toBottomOf="@id/mod_tip_cl_step1">
        <ImageView android:layout_width="wrap_content" android:layout_height="fill_parent" android:src="@drawable/common_bg_tip_title" app:layout_constraintStart_toStartOf="parent" />
        <TextView android:textSize="@dimen/common_text_size_middle" android:textColor="@color/common_color_text_tip_step_title" android:id="@id/mod_tip_tv_step2_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/sgmw_pad_mod_creat_guide_step02_title" android:fontFamily="@font/montserrat_regular" android:layout_marginStart="12.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
        <TextView android:textSize="@dimen/common_text_size_middle" android:textColor="@color/common_color_text_tip_step_content" android:id="@id/mod_tip_tv_step2_content" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/sgmw_pad_mod_guide_2_step_2_subtitle" android:layout_marginStart="27.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toEndOf="@id/mod_tip_tv_step2_title" app:layout_constraintTop_toTopOf="parent" app:layout_constraintWidth_max="298.0dip" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout android:id="@id/mod_tip_cl_step3" android:background="@drawable/common_bg_tip_step" android:layout_width="438.0dip" android:layout_height="108.0dip" android:layout_marginTop="24.0dip" app:layout_constraintStart_toStartOf="@id/mod_tip_cl_step1" app:layout_constraintTop_toBottomOf="@id/mod_tip_cl_step2">
        <ImageView android:layout_width="wrap_content" android:layout_height="fill_parent" android:src="@drawable/common_bg_tip_title" app:layout_constraintStart_toStartOf="parent" />
        <TextView android:textSize="@dimen/common_text_size_middle" android:textColor="@color/common_color_text_tip_step_title" android:id="@id/mod_tip_tv_step3_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/sgmw_pad_mod_creat_guide_step03_title" android:fontFamily="@font/montserrat_regular" android:layout_marginStart="12.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
        <TextView android:textSize="@dimen/common_text_size_middle" android:textColor="@color/common_color_text_tip_step_content" android:id="@id/mod_tip_tv_step3_content" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/sgmw_pad_mod_guide_2_step_3_subtitle" android:layout_marginStart="27.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toEndOf="@id/mod_tip_tv_step3_title" app:layout_constraintTop_toTopOf="parent" app:layout_constraintWidth_max="298.0dip" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>